--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+html {
+  height: 100%;
+  scroll-behavior: smooth;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*, *::after, *::before {
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font-family: 'Open Sans', 'Arial', sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  background-color: #222;
+}
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  object-fit: cover;
+}
+main {
+  flex-grow: 1;
 }
 
-.App-link {
-  color: #61dafb;
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0px auto;
+  padding: 0px 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn__top{
+  position: fixed;
+  bottom: 25%;
+  right: 0px;
+  border: none;
+  background-color: #ffa600;
+  color: #fff;
+  padding: 3px 2px 0px 5px;
+  border-radius: 10px 0px 0px 10px;
+  cursor: pointer;
+  opacity: 1;
+  transition: all .8s ease;
+  box-shadow: 0px 3px 10px 0px #ffa500;
 }
