--- a/src/components/Address/Address.css
+++ b/src/components/Address/Address.css
@@ -10,3 +10,19 @@
     max-width: 100%;
     height: 500px;
 }
+@media only screen and (max-width: 750px){
+    .address__frame{
+        height: 400px;
+    }
+}
+
+@media only screen and (max-width: 485px){
+    .adres__title{
+        font-size: 24px;
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
+    .address__frame{
+        height: 300px;
+    }
+}
