--- a/src/components/Company/Company.css
+++ b/src/components/Company/Company.css
@@ -26,3 +26,33 @@
     font-size: 13px;
     color: #ffa500;
 }
+
+@media only screen and (max-width: 885px){
+    .company__box{
+        padding: 0px 20px 0px 20px;
+    }
+}
+@media only screen and (max-width: 835px){
+    .company__content{
+        display: block;
+    }
+    .company__img{
+        width: 100%;
+        height: 400px;
+    }
+    .company__box{
+        padding: 20px 10px 15px 20px;
+    }
+}
+
+@media only screen and (max-width: 485px){
+    .company__img{
+        width: 100%;
+        height: 300px;
+    }
+    .company__title{
+        font-size: 24px;
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
+}
