--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -8,3 +8,9 @@
     padding-bottom: 30px;
     background-color: #0D1015;
 }
+
+@media only screen and (max-width: 750px){
+    .site__header{
+        padding: 0px 0px 40px 0px;
+    }
+}
