--- a/src/components/Company/Company.css
+++ b/src/components/Company/Company.css
@@ -20,7 +20,7 @@
 .company__text{
     font-size: 13px;
     line-height: 1.6;
-    color: #999;
+    color: #fefefe;
 }
 .company__str{
     font-size: 13px;
