--- a/src/components/Catalog/Catalog.css
+++ b/src/components/Catalog/Catalog.css
@@ -11,7 +11,7 @@
     font-size: 16px;
     text-align: center;
     margin: 0px;
-    color: #999;
+    color: #fefefe;
 }
 
 .repair__list{
@@ -71,7 +71,7 @@
     font-size: 14px;
     line-height: 1.6;
     margin: 0px;
-    color: #999;
+    color: #fefefe;
     margin-bottom: 30px;
 }
 .repair__link{
@@ -97,7 +97,7 @@
         font-size: 14px;
         text-align: center;
         margin: 0px;
-        color: #999;
+        color: #fefefe;
     }
     .repair__list{
         display: block;
@@ -135,7 +135,7 @@
         font-size: 14px;
         line-height: 1.4;
         margin: 0px;
-        color: #999;
+        color: #fefefe;
         margin-bottom: 30px;
     }
     .repair__link{
