--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -31,11 +31,11 @@
 }
 .header__phone-box::before{
     position: absolute;
-    width: 40px;
-    height: 40px;
-    background-image: url("../../assets/images/telephone.png");
-    top: -8px;
-    left: -60px;
+    width: 30px;
+    height: 30px;
+    background-image: url("../../assets/images/phone.svg");
+    top: -2px;
+    left: -40px;
     background-repeat: no-repeat;
     background-size: 100%;
     content: '';
@@ -49,15 +49,11 @@
 .header__phone:hover{
     color: #41A5EE;
 }
+
 .header__link + .header__link{
     margin-left: 15px;
 }
 
-@media only screen and (max-width: 875px){
-    .header__phone-box::before{
-        left: -50px;
-    }
-}
 
 @media only screen and (max-width: 835px){
     .header{
@@ -217,11 +213,11 @@
     }
     .header__phone-box::before{
         position: absolute;
-        width: 30px;
-        height: 30px;
-        background-image: url("../../assets/images/telephone.png");
-        top: -6px;
-        left: -20px;
+        width: 25px;
+        height: 25px;
+        background-image: url("../../assets/images/phone.svg");
+        top: -2px;
+        left: -10px;
         background-repeat: no-repeat;
         background-size: 100%;
         content: '';
@@ -229,9 +225,6 @@
     .header__link-img{
         width: 30px;
         height: 30px;
-    }
-    .hero__link-img{
-        width: 34px;
     }
     .header__phone-box{
         margin-top: 10px;
